feat(M4): Album and Print initial implementation
